[package]
name = "aqua"
version = "0.1.0"
edition = "2018"
authors = ["Marwan <marwan-smouni@hotmail.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
lto = true

[dependencies]
panic-halt = "0.2"
ufmt = "0.1"
nb = "1.0"
embedded-hal = "0.2"
pwm-pca9685 = "0.3"
arduino-hal={path="avr-hal/arduino-hal/",features=["arduino-uno"]}
avr-device = "0.3"
either={version = "1.6.1",default-features = false}





# avr-hal-generic={ path = "avr-hal/avr-hal-generic/"}
# attiny-hal={path = "avr-hal/mcu/attiny-hal/"}
# atmega-hal={path = "avr-hal/mcu/atmega-hal/"}


# # Because this crate has its own check that at least one device is selected, we
# # can safely "circumvent" the check in `atmega-hal`.  Due to compile order,
# # this allows us to show our error instead of the one from `atmega-hal` (which
# # is much less helpful in this situation).
# features = ["disable-device-selection-error"]

# [dependencies.attiny-hal]
# path = "avr-hal/mcu/attiny-hal/"
# optional = true
