[package]
name = "aqua"
version = "0.2.0"
edition = "2021"
authors = ["Marwan <marwan-smouni@hotmail.fr>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies]
arduino-hal= { path = "avr-hal/arduino-hal/", features = ["arduino-nano"] }
avr-device = { version = "0.5" }
micromath = "2.0"
ufmt = "0.1"
esp8266-at-command = { path= "esp8266-at-command" }
nb = "1"
simple-clock = "0.1"
arrayvec = { version = "0.7", default-features = false }
